--- a/src/index.css
+++ b/src/index.css
@@ -1,193 +1,12 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
 }
-
-.page {
-  margin: auto;
-  max-width: 1200px;
-}
-.header {
-  background-color: #475278;
-  background-image: url(./img/new_york.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 25vh;
-  width: 100%;
-}
-
-.overlay {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
-}
-.content {
-  padding: 2%;
-  height: 50vh;
-  background: rgb(61, 60, 77);
-  background: -moz-linear-gradient(
-    90deg,
-    rgba(61, 60, 77, 1) 0%,
-    rgba(60, 80, 150, 1) 14%,
-    rgba(32, 35, 68, 1) 37%,
-    rgba(76, 79, 125, 1) 75%,
-    rgba(24, 25, 34, 1) 100%
-  );
-  background: -webkit-linear-gradient(
-    90deg,
-    rgba(61, 60, 77, 1) 0%,
-    rgba(60, 80, 150, 1) 14%,
-    rgba(32, 35, 68, 1) 37%,
-    rgba(76, 79, 125, 1) 75%,
-    rgba(24, 25, 34, 1) 100%
-  );
-  background: linear-gradient(
-    90deg,
-    rgba(61, 60, 77, 1) 0%,
-    rgba(60, 80, 150, 1) 14%,
-    rgba(32, 35, 68, 1) 37%,
-    rgba(76, 79, 125, 1) 75%,
-    rgba(24, 25, 34, 1) 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3d3c4d",endColorstr="#181922",GradientType=1);
-}
-.flex-row {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
-}
-.card {
-  margin-right: 50px;
-  width: 47%;
-  min-height: 150px;
-  padding: 30px;
-  display: flex;
-  border: solid 3px rgb(197, 227, 230);
-  border-radius: 10px;
-  font-family: 'suisse', 'arial', sans-serif;
-  font-size: 40px;
-  color: rgb(197, 227, 230);
-  align-items: center;
-  justify-content: center;
-}
-
-.card:last-child {
-  margin: 0;
-}
-
-.answer {
-  background: none;
-  /* border: none; */
-  outline: none;
-  height: 100%;
-  width: 100%;
-  font-family: 'suisse', 'arial', sans-serif;
-  font: 40px rgb(197, 227, 230);
-  text-align: center;
-  color: rgb(197, 227, 230);
-}
-
-.footer {
-  background-color: #475278;
-  background-image: url(./img/vladivostok.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 25vh;
-  width: 100%;
-}
-
-.button,
-.selectorButton {
-  margin: 20px 5px;
-  /* display: block; */
-  width: 150px;
-  height: 40px;
-  font-size: 14px;
-  /*background-color: rgb(34, 137, 155);*/
-  background: transparent;
-  border: rgb(197, 227, 230) solid 2px;
-  font-family: 'suisse', 'arial', sans-serif;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: rgb(197, 227, 230);
-  border-radius: 5px;
-  text-align: center;
-}
-
-.button_active {
-  background-color: orange;
-}
-.vocButton {
-  margin: 5px;
-  display: inline-block;
-  width: 50px;
-  height: 30px;
-  font-size: 14px;
-  background: transparent;
-  border: rgb(197, 227, 230) solid 2px;
-  font-family: 'suisse', 'arial', sans-serif;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: rgb(197, 227, 230);
-  border-radius: 2px;
-  text-align: center;
-}
-
-.vocButton_chozen {
-  background-color: orange;
-}
-
-.flex-column {
-  height: 100%;
-  font-family: 'suisse', 'arial', sans-serif;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: rgb(197, 227, 230);
-  font-size: 18px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.button:hover {
-  opacity: 0.8;
-}
-
-.vocButton:hover {
-  color: black;
-  border: black solid 2px;
-}
-
-.button:active {
-  color: rgb(88, 154, 165);
-}
-@media (max-height: 800px) {
-  .header {
-    height: 0;
-  }
-  .footer {
-    height: 0;
-  }
-  .content {
-    height: 100vh;
-  }
-}
+@import url(./blocks/card/card.css);
+@import url(./blocks/button/button.css);
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/header/header.css);
+@import url(./blocks/page/page.css);
+@import url(./blocks/overlay/overlay.css);
+@import url(./blocks/content/content.css);
+@import url(./blocks/flex-row/flex-row.css);
