refactor: create Card components, move IMG to public

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
   background-color: #475278;
-  background-image: url(../../img/new_york.jpg);
+  background-image: url(../../../public/img/new_york.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
