refactor: migrate to vite

--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: #475278;
-  background-image: url(../../../public/img/vladivostok.jpg);
+  background-image: url(../../../img/vladivostok.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
