refactor: migrate all styles to scss, make global style variables

--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,6 +1,7 @@
+@use "../../styles/globalVariables.scss" as *;
+
 .footer {
-  background-color: #475278;
-  background-image: url(../../../img/vladivostok.jpg);
+  background-color: $purple;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
