--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -1,7 +1,6 @@
 .page {
+  position: relative;
   margin: auto;
   max-width: 1200px;
-  display: grid;
-  grid-template-rows: 170px 1fr 170px;
   height: 100vh;
 }
