--- a/src/styles/globalVariables.scss
+++ b/src/styles/globalVariables.scss
@@ -7,6 +7,7 @@ $pink: #a621b1;
 $success: #3ca33c;
 $success-hover: #398639;
 $success-pressed: #266626;
+$success-light: #00a30010;
 $failure: #ea9700;
 $black: #000000;
 
