--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,10 +1,25 @@
 @use "../../styles/globalVariables.scss" as *;
 
 .header {
+  width: 600px;
+  height: 600px;
+  border-radius: 50%;
   position: absolute;
   background-color: $purple;
   background-size: cover;
-  width: 100%;
+  top: -400px;
+  left: -200px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding-bottom: 100px;
+  padding-left: 100px;
+
+  &__title {
+    font-family: "Pacifico";
+    color: $white;
+    font-size: 40px;
+  }
 }
 @media (max-height: 800px) {
   .header {
