refactor: create Menu component and moved corresponding code out to there

--- a/src/styles/globalVariables.scss
+++ b/src/styles/globalVariables.scss
@@ -10,6 +10,7 @@ $success-pressed: #266626;
 $success-light: #00a30010;
 $failure: #ea9700;
 $black: #000000;
+$purple-pink: linear-gradient(90deg, $purple, $pink);
 
 $font-family: "Mont";
 
