--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -7,7 +7,7 @@
   bottom: 0;
   left: 0;
   background-color: $purple;
-  background: linear-gradient(90deg, $purple, $pink);
+  background: $purple-pink;
   z-index: 2;
   display: none;
 }
