--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -2,7 +2,7 @@
 
 .card {
   background-color: $mid-gray;
-  width: calc(50% - 30px);
+  width: 100%;
   height: 200px;
   padding: 30px;
   display: flex;
