--- a/src/styles/globalVariables.scss
+++ b/src/styles/globalVariables.scss
@@ -14,7 +14,8 @@ $purple-pink: linear-gradient(90deg, $purple, $pink);
 
 $font-family: "Mont";
 
-$breakpointDesktop: 1300px;
+$breakpointDesktop: 1200px;
+$breakpointDesktopSmall: 1000px;
 $breakpointTablet: 800px;
 $breakpointMobile: 675px;
 $breakpointMobileSmall: 500px;
