--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -9,6 +9,8 @@
   background: $purple-pink;
   z-index: 2;
   display: none;
+  align-items: center;
+  justify-content: center;
 
   &_shown {
     display: flex;
@@ -32,20 +34,31 @@
   }
 
   &__container {
-    background: $white;
-    width: 1500px;
-    height: 1500px;
-    border-radius: 50%;
-    position: absolute;
-    top: -500px;
-    left: -50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    z-index: 2;
+  }
+  &__decor {
+    background: $white;
+    width: 100%;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    position: absolute;
+    top: -40%;
+    left: -15%;
+    display: flex;
     &_inverted {
       background: $purple-pink;
+    }
+    @media screen and (max-width: $breakpointDesktop) {
+      width: 110%;
+    }
+    @media screen and (max-width: $breakpointDesktopSmall) {
+      width: 115%;
+      top: -30%;
+      left: -20%;
     }
   }
 }
