--- a/src/components/CardsContainer/CardsContainer.scss
+++ b/src/components/CardsContainer/CardsContainer.scss
@@ -1,5 +1,6 @@
 .cards-container {
   width: 100%;
+  max-width: 1200px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
