--- a/src/components/CardsContainer/CardsContainer.scss
+++ b/src/components/CardsContainer/CardsContainer.scss
@@ -4,5 +4,9 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
+  max-height: 620px;
   gap: 20px;
+  &_one-row {
+    grid-template-rows: 1fr;
+  }
 }
