--- a/src/components/SubmitButton/SubmitButton.scss
+++ b/src/components/SubmitButton/SubmitButton.scss
@@ -28,4 +28,10 @@
   &_fail {
     background-color: $failure;
   }
+  @media screen and (max-width: $breakpointDesktopLarge) {
+    bottom: 15%;
+  }
+  @media screen and (max-width: $breakpointDesktopSmall) {
+    bottom: 12%;
+  }
 }
