--- a/src/styles/globalVariables.scss
+++ b/src/styles/globalVariables.scss
@@ -14,6 +14,7 @@ $purple-pink: linear-gradient(90deg, $purple, $pink);
 
 $font-family: "Mont";
 
+$breakpointDesktopLarge: 1400px;
 $breakpointDesktop: 1200px;
 $breakpointDesktopSmall: 1000px;
 $breakpointTablet: 800px;
